premilminary sqlite db

--- a/predicting_emissions.ipynb
+++ b/predicting_emissions.ipynb
@@ -47,7 +47,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Consider the problem of predicting the marginal emissions on day $i$ ($M_i = E_i/G_i$) using the generation on day $i$ ($G_i$) and the generation and emissions of other \"similar\" days $j$ ($G_j$ and $E_j$). Let's start by seeing how well we can do simply by taking the average of $G_i \\times E_j/G_j$ for the $n$ most similar days to day $i$. In other words, consider a $n$-term linear model with fixed coefficients of $1/n$, i.e., $\\hat{M_i} = \\frac{1}{n}\\sum_{j=1}^{n} G_i \\times E_j/G_j$. For a measure of similarity between days, we use the RMS error in the hourly generation timeseries. The plots show the RMS prediction error of this model for a range of values of $n$, grouped by month and by percentile of daily generation."
+      "Consider the problem of predicting the marginal emissions on day $i$ ($M_i = E_i/G_i$) using the generation on day $i$ ($G_i$) and the generation and emissions of other \"similar\" days $j$ ($G_j$ and $E_j$). Let's start by seeing how well we can do simply by taking the average of $G_i \\times E_j/G_j$ for the $n$ most similar days to day $i$. In other words, consider a $n$-term linear model with fixed coefficients of $1/n$, i.e., $\\hat{E_i} = \\frac{1}{n}\\sum_{j=1}^{n} G_i \\times E_j/G_j$. For a measure of similarity between days, we use the RMS error in the hourly generation timeseries. The plots show the RMS prediction error of this model for a range of values of $n$, grouped by month and by percentile of daily generation."
      ]
     },
     {
