--- a/notebooks/sqlite_storage.ipynb
+++ b/notebooks/sqlite_storage.ipynb
@@ -29,7 +29,37 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for st in ['ny']:\n",
+      "    load('2010', st)\n",
+      "    print st, np.sum(data['2010'][st][\"GLOAD (MW)\"])\n",
+      "    data['2010'].pop(st)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "loading 2010 ny\n",
+        "ny"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 65114159.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -74,7 +104,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 45
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -93,7 +123,101 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "stfac_df = facility_df[facility_df['State']=='CT']\n",
+      "for ba in stfac_df[\"BA_ABBREV\"].unique():\n",
+      "    bafac_df = stfac_df[stfac_df[\"BA_ABBREV\"]==ba]\n",
+      "    print ba, bafac_df[\" Facility ID (ORISPL)\"].unique()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "ISNE [ 10675.   6635.  10567.    540.  55042.    568.  50498.    542.    544.\n",
+        "    561.  54657.  56798.  55149.    562.  55126.    546.   6156.    548.\n",
+        "    581.  54236.  54605.  50736.    563.    565.    557.  55517.  56629.\n",
+        "  56189.]\n"
+       ]
+      }
+     ],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for st in ['ca']:\n",
+      "    load('2010', st)\n",
+      "    epa_df = data['2010'][st]\n",
+      "    \n",
+      "    facilities_in_st_df = facility_df[facility_df['State']==st.upper()]\n",
+      "   # fac2ba_map = dict(set(zip(ba2fac_df[\" Facility ID (ORISPL)\"], ba2fac_df[\"BA_ABBREV\"])))\n",
+      "    \n",
+      "    for ba in facilities_in_st_df[\"BA_ABBREV\"].unique():\n",
+      "        print ba\n",
+      "        facilities_in_ba_df = facilities_in_st_df[facilities_in_st_df[\"BA_ABBREV\"]==ba]\n",
+      "        facilities_in_ba = list(facilities_in_ba_df[\" Facility ID (ORISPL)\"].unique())\n",
+      "        \n",
+      "        df = epa_df[epa_df[\"ORISPL_CODE\"].isin(facilities_in_ba)]\n",
+      "        hrly_agg = df.groupby(['OP_DATE', 'OP_HOUR']).aggregate(np.sum)[['GLOAD (MW)', 'CO2_MASS (tons)']]\n",
+      "        hrly_agg['BA_ABBREV'] = pd.Series(ba, index=hrly_agg.index)\n",
+      "        hrly_agg['STATE'] = pd.Series(st.upper(), index=hrly_agg.index)\n",
+      "        hrly_agg.to_csv('data/original/%s_%s_aggregate_raw.csv' % (ba, st.upper()), quoting=csv.QUOTE_NONNUMERIC)\n",
+      "\n",
+      "   # data['2010'].pop(st)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "CISO\n",
+        "TID"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "SMUD"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "IID"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "LDWP"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -785,9 +909,9 @@
       "                   'total(epa.\"CO2_MASS_(tons)\")*2000 as RE_lb',\n",
       "                   'FROM facilities JOIN epa',\n",
       "                   'ON epa.ORISPL_CODE = facilities.\"_Facility_ID_(ORISPL)\"',\n",
-      "                #   'WHERE facilities.BA_ABBREV=\"%s\"' % ba,\n",
-      "                #   'GROUP BY epa.OP_DATE, epa.OP_HOUR'\n",
-      "                   'GROUP BY facilities.BA_ABBREV, epa.OP_DATE, epa.OP_HOUR'\n",
+      "                   'WHERE facilities.BA_ABBREV=\"%s\"' % ba,\n",
+      "                   'GROUP BY epa.OP_DATE, epa.OP_HOUR'\n",
+      "                #   'GROUP BY facilities.BA_ABBREV, epa.OP_DATE, epa.OP_HOUR'\n",
       "                   #'LIMIT 10'\n",
       "                 ]\n",
       "        query = ' '.join(queries)\n",
@@ -797,7 +921,7 @@
       "        t2 = time.time()\n",
       "        print ba\n",
       "        print t2-t1\n",
-      "        df.to_csv('data/original/%s_aggregate_raw.csv' % 'all', quoting=csv.QUOTE_NONNUMERIC)"
+      "        df.to_csv('data/original/%s_aggregate_raw.csv' % ba, quoting=csv.QUOTE_NONNUMERIC)"
      ],
      "language": "python",
      "metadata": {},
@@ -807,11 +931,34 @@
        "stream": "stdout",
        "text": [
         "SMUD\n",
-        "15.5498640537\n"
+        "15.3507540226\n"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "queries = ['SELECT facilities.BA_ABBREV, epa.OP_DATE, epa.OP_HOUR,',\n",
+      "                   'total(epa.\"GLOAD_(MW)\") as RF_MW,',\n",
+      "                   'count(epa.\"GLOAD_(MW)\") as N_UNITS_ON,',\n",
+      "                   'total(epa.\"CO2_MASS_(tons)\")*2000 as RE_lb',\n",
+      "                   'FROM facilities JOIN epa',\n",
+      "                   'ON epa.ORISPL_CODE = facilities.\"_Facility_ID_(ORISPL)\"',\n",
+      "                   'WHERE facilities.BA_ABBREV=\"%s\"' % 'PJM',\n",
+      "                   'GROUP BY epa.OP_DATE, epa.OP_HOUR'\n",
+      "                #   'GROUP BY facilities.BA_ABBREV, epa.OP_DATE, epa.OP_HOUR'\n",
+      "                   #'LIMIT 10'\n",
+      "                 ]\n",
+      "query = ' '.join(queries)\n",
+      "\n",
+      "df = sql.read_frame(query, conn)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
